log contextID based on servletContext set SecurityManager null